# CppConstruct

./: .clang-format  CMakeLists.txt  README.md
src/: bufferreadable.cpp  main.cpp  parser.cpp
src/include/: arrayparser.h  bufferreadable.h  example.h  integralparser.h  ireadable.h  parser.h  parsingcontext.h  stringparser.h  structparser.h  tupleparser.h
